--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "rct",
 	"version": "0.1.0",
-	"homepage": "https://holyolg.github.io/ReactTodo",
+	"homepage": "https://holyolg.github.io/react-to-do",
 	"private": true,
 	"dependencies": {
 		"@testing-library/jest-dom": "^5.16.5",
