--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"homepage": "https://holyolg.github.io/react-to-do",
 	"private": true,
 	"dependencies": {
+		"@formkit/auto-animate": "^0.8.2",
 		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^13.5.0",
